<?xml version="1.0" encoding="utf-8"?>
<!-- 
 *  Catroid: An on-device graphical programming language for Android devices
 *  Copyright (C) 2010  Catroid development team 
 *  (<http://code.google.com/p/catroid/wiki/Credits>)
 *
 *  This program is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 3 of the License, or
 *  (at your option) any later version.
 *
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal"
>
	<ImageView
		android:id="@+id/grabber"
		android:layout_alignParentLeft="true"
		android:layout_alignParentTop="true"
		android:layout_alignParentBottom="true"
		android:layout_gravity="center_vertical"
		android:layout_width="wrap_content"
		android:src="@drawable/ic_mp_move"
		android:layout_height="wrap_content" />
	<LinearLayout
		android:orientation="horizontal"
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:background="@drawable/brick_blue"
	>
		<TextView
			android:text="@string/brick_forever"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:textColor="@color/white"
			android:textSize="18dip"
			android:textStyle="bold" />
	</LinearLayout>
</LinearLayout>