...
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="vertical"
		android:background="@drawable/brick_violet"
	>
		<TextView
			android:text="@string/brick_note"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:textColor="@color/white"
			android:textSize="18dip"
			android:textStyle="bold"
		>
...
